fix post alignment #3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,7 +529,9 @@ POST/ARTICLE HEADERS
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 920px;
+	max-width: 920px;
+	margin-left: auto;
+    margin-right: auto;
 }
  .post-template .kg-card-markdown > p:first-child {
     font-size: 1.25em;
